deploy/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desker-frontend
  namespace: team-6-ns
spec:
  type: ClusterIP
  selector:
    app: desker-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
