deploy/k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desker-grafana
  namespace: team-6-ns
spec:
  type: ClusterIP
  selector:
    app: desker-grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
