deploy/k8s/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: desker-prometheus
  namespace: team-6-ns
spec:
  type: ClusterIP
  selector:
    app: desker-prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
      protocol: TCP
